changes for 3rd pre-delivery of web development course

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <section class="contenedorInicio">
         <div>
             <div>
-                <img class="bordesRedondeados imagenes" src="./img/messiiniciopag.jpg" alt="messi_inicio">
+                <img class="imagenes" src="./img/messiiniciopag.jpg" alt="messi_inicio">
             </div>
 
             <div>
-                <img class="bordesRedondeados imagenes" src="./img/messifamiliainicio.jpg" alt="messi_familia_inicio">
+                <img class="imagenes" src="./img/messifamiliainicio.jpg" alt="messi_familia_inicio">
             </div>
         </div>
         <div class="textoInicio">
