--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Description -->
+    <meta name="description" content="Escribenos para saber desde que parte del mundo sigues al astro argentino y cual es tu jugada favorita de el">
+    <!-- keywords -->
+    <meta name="keywords" content="Messi, Argentina, contacto, Escribenos, fanpage, mundial, goat, futbol, pelota">
+    <!-- iconos -->
     <link rel="shortcut icon" href="./img/goat_animal_icon_123547.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-6.5.1" crossorigin="anonymous" />
