--- a/pages/sel_argentina.html
+++ b/pages/sel_argentina.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Description -->
+    <meta name="description" content="Mira la trayectoria de Lionel Messi en la selección Argentina, su debut y titulos conseguidos">
+    <!-- keywords -->
+    <meta name="keywords" content="Messi, Argentina, Titulos, goat, futbol, campeon, worldcup">
+    <!-- iconos -->
     <link rel="shortcut icon" href="./img/goat_animal_icon_123547.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-6.5.1" crossorigin="anonymous" />
