--- a/pages/titles.html
+++ b/pages/titles.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Description -->
+    <meta name="description" content="Mira todos los titulos de Lionel Andres Messi actualmente en esta fanpage">
+    <!-- keywords -->
+    <meta name="keywords" content="Messi, goat, titulos, trofeos, Argentina, Inter, futbol">
+    <!-- iconos -->
     <link rel="shortcut icon" href="./img/goat_animal_icon_123547.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-6.5.1" crossorigin="anonymous" />
