Last changes for the final project of the web development course

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -26,7 +26,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg goldBg">
+        <nav class="navbar navbar-expand-lg goldBg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">LM10🐐</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
     </header>
     <main>
         <section class="contenedorGaleria container">
-            <h2 class="text-center mt-3">Fotos.</h2>
+            <h2 class="botonGaleria1 text-center mt-5 rotate-center">Fotos.</h2>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <img class="bordesRedondeados" src="../img/messi2005/messi2005.jpg" alt="messi2005">
@@ -178,7 +178,7 @@
                     <img src="../img/messi2023/messi20234.jpg" alt="messi20234" class="bordesRedondeados">
                 </div>
 
-                <h2 class="botonGaleria">VIDEOS.</h2>
+                <h3 class="botonGaleria1 text-center mt-3 rotate-center">Videos.</h3>
                 <div class="formatoVideoGaleria">
                     <iframe class="bordesRedondeadosVideo videoGaleria" width="560" height="315" src="https://www.youtube.com/embed/9RCw4DI0hg8?si=KD6twnstwLAHwlwg"
                         title="YouTube video player" frameborder="0"
