--- a/pages/sel_argentina.html
+++ b/pages/sel_argentina.html
@@ -26,7 +26,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg goldBg">
+        <nav class="navbar navbar-expand-lg goldBg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">LM10🐐</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
